--- a/forms/index.html
+++ b/forms/index.html
@@ -12,6 +12,9 @@
         <div class="box">
 			ANIME
         </div>
+		<div class="box2">
+			ANIME 2
+        </div>
     </div>
 </body>
 </html>
