--- a/forms/index.html
+++ b/forms/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="box">
+        <div class="box1">
 			ANIME
         </div>
 		<div class="box2">
